# doppler

./: .gitignore  Dockerfile  README.md
DOPPLER/: CMakeLists.txt  README.md
DOPPLER/demo_examples/: demo1.c  demo1.json  demo1_run.md  demo2.c  demo2.json  demo2_run.md  demo3.c  demo3.json  demo3_run.md  demo4.c  demo4.json  demo4_run.md  demo5.c  demo5.json  demo5_run.md  not_regular.bc  not_regular.c  not_regular.json
DOPPLER/include/l-star/: FSA_FSAtoREConverter.h  FiniteAutomaton.h  LStar.h  Query.h  RE_ReaderWriter.hpp  RE_RegularExpression.hpp  RE_TreeNode.hpp  StateElimination.h
DOPPLER/real_examples/apache_1.3.28/: Makefile  apache_run.md  config.status  configure
DOPPLER/real_examples/apache_1.3.28/src/: Configuration  Configuration.apaci  Configuration.tmpl  Makefile  Makefile.config  apaci  buildmark.bc  modules.c
DOPPLER/real_examples/cherry/: cherry.json  cherry_run.md
DOPPLER/real_examples/cherry/src/: http.c  log.c  makefile  server.c  utils.c
DOPPLER/real_examples/ghttpd-1.4/: Makefile  ghttpd-1.4-grammar.txt  ghttpd.bc  ghttpd.json  ghttpd_run.md  main.c  protocol.c  util.c
DOPPLER/real_examples/hcode2.1/: CHANGES  Makefile  README  conv.c  h2Bcode.h  h3Bcode.h  h4Bcode.h  hcode.c  hcode.h  hcode.json  hcode_run.md  in.c  mail.c  out.c
DOPPLER/real_examples/hcode2.1/CODE/: CODE.def  johap.intro  johap.sugg  tbl.cons  tbl.jamos  tbl.vow  try.roman  uni.code  uni.sum  uni.summary
DOPPLER/real_examples/min-dop-klee/: Makefile  min-dop.bc  min-dop_low.bc  min-dop_run.md  min_dop.json
DOPPLER/real_examples/min-dop-klee/src/: vuln_srv_klee.c
DOPPLER/real_examples/nginx-1.3.9/: nginx.json  nginx_run.md  tracemap
DOPPLER/real_examples/nginx-1.3.9/objs/: Makefile  autoconf.err  ngx_auto_config.h
DOPPLER/real_examples/nullhttpd-0.5.0/: nullhttpd_run.md
DOPPLER/real_examples/nullhttpd-0.5.0/src/: Makefile  config.c  httpd.json  main.c  main.h  main2.c
DOPPLER/real_examples/pico-httpd/: Makefile  main.c  pico-httpd_run.md  pico.json
DOPPLER/real_examples/proftpd-simple/: Makefile  proftd-simple  proftpd-simple.json  proftpd_run.md
DOPPLER/real_examples/proftpd-simple/include/: conf.h  pool.h
DOPPLER/real_examples/proftpd-simple/src/: main.c
DOPPLER/real_examples/redis-7.0.11/: Makefile  dfa.txt  redis_run.md  tracemap
DOPPLER/real_examples/redis-7.0.11/src/: Makefile  db.c  redis-server.json  server.c  server.h  tmp.txt
DOPPLER/real_examples/sqlite-3.40.1/: Makefile  compiler.doppler  config.status  configure  configure.ac  configure~  libtool  shell.c  shell_simp.c  sqlite3.h  sqlite3.json  sqlite3.pc  sqlite_run.md
DOPPLER/real_examples/sqlite-3.40.1/.deps/: sqlite3-shell.Po  sqlite3-sqlite3.Po  sqlite3.Plo
DOPPLER/real_examples/sqlite-3.40.1/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.3
DOPPLER/real_examples/sudo-1.8.0/: config.h  config.status  explot.c  libtool  pathnames.h  sudo_run.md  sudo_version.c
DOPPLER/real_examples/sudo-1.8.0/autom4te.cache/: output.0t  traces.0t
DOPPLER/real_examples/sudo-1.8.0/common/: Makefile
DOPPLER/src/: DopplerQuery.h  ExecutionTree.h  KleeHandler.h  KleeRunner.h  aaInfo.cpp  aaInfo.h  compilerTemplate.cpp  langCompiler.cpp  langCompiler.h  langGenerator.cpp  langGenerator.h  main.cpp  validStmt.cpp  validStmt.h  validVar.cpp  validVar.h
DOPPLER/src/l-star/: RE_ReaderWriter.cpp  RE_RegularExpression.cpp  RE_TreeNode.cpp
DOPPLER/tool/: klee.cpp
(+66 files in other folders)
